updated background color and styling

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -1,9 +1,8 @@
-/*body{*/
-/*    background-image: url("moriah-watermark.jpg");*/
-/*    background-repeat: no-repeat;*/
-/*    width: 100%;*/
-/*    height: auto;*/
-/*}*/
+header images colors:
+
+body {
+    background-color: #cebc00;
+}
 
 #header-image {
     width: 100%;
