pulled colors from images, saved in css file

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -1,4 +1,19 @@
-header images colors:
+/*header images colors:
+#ffb02c - orange on house
+#0092b0 - darker blue buildings
+#02d3fe - blue sky
+#00c48a - green plants
+#8c8a7b - lighter building
+#7f7a6f - darker building
+#ff9300 - orange sun 1
+#fe7920 - orange sun 2
+#ff5c3a - orange/red sun 3
+#fe3d49 - pink sun 4
+#ff2a59 - pink sun 5
+#fe2c6d - pink sun 6
+
+
+*/
 
 body {
     background-color: #cebc00;
