--- a/webpage-style.css
+++ b/webpage-style.css
@@ -17,9 +17,26 @@
 
 body {
     background-color: #cebc00;
+    margin: 0;
+    padding: 0;
 }
 
 #header-image {
     width: 100%;
     height: auto;
+}
+
+#navbar {
+    background-color: #0092b0;
+    color: white;
+    height: 50px;
+    margin-bottom: 20px;
+    border: 3px solid #8c8a7b;
+}
+
+#about-me {
+    border: 3px solid #8c8a7b;
+    background: #c3d47d;
+    width: 50vw;
+
 }
