--- a/webpage-style.css
+++ b/webpage-style.css
@@ -14,13 +14,23 @@
 #fbf001 - yellow name
 */
 * {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lato', sans-serif;
+}
+
+h2 {
+    font-family: 'Lobster', cursive;
 }
 body {
     background-color: #cebc00;
     margin: 0;
     padding: 0;
 
+}
+
+html {
+    width: 100vw;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 #header-image {
@@ -36,21 +46,24 @@ body {
     border: 3px solid #8c8a7b;
 }
 
+
 #about-me, #connect {
     display: inline-block;
     border: 3px solid #8c8a7b;
     background: #b8c972;
-    width: 43vw;
+    width: 100vw;
+    padding: 10px;
+    margin-bottom: 10px;
     /*height: 25vw;*/
-    margin: 20px;
-    padding: 20px;
+
 }
 #main-project {
     display: inline-block;
     border: 3px solid #8c8a7b;
     background: #b8c972;
     width: 100vw;
-    padding: 20px 0 !important;
+    padding: 10px;
+    margin-bottom: 10px;
 
 
 }
@@ -75,10 +88,9 @@ a:active {
     display: inline-block;
     border: 3px solid #8c8a7b;
     background: #fffee8;
-    width: 95%;
+    width: 100%;
     /*height: 25vw;*/
-    margin: 20px;
-    padding: 20px;
+    padding: 10px;
 
 }
 
