--- a/webpage-style.css
+++ b/webpage-style.css
@@ -41,9 +41,12 @@ html {
 #navbar {
     background-color: #0092b0;
     color: white;
+    width: 100vw;
     height: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border: 3px solid #8c8a7b;
+    /*display: block;*/
+    /*position: relative;*/
 }
 
 
@@ -91,6 +94,7 @@ a:active {
     width: 100%;
     /*height: 25vw;*/
     padding: 10px;
+    margin-bottom: 10px;
 
 }
 
