--- a/webpage-style.css
+++ b/webpage-style.css
@@ -49,7 +49,12 @@ html {
     /*position: relative;*/
 }
 
-
+#icon {
+    width: 12%;
+    height: auto;
+    background-color: #fffee8;
+    border-radius: 50%;
+}
 #about-me, #connect {
     display: inline-block;
     border: 3px solid #8c8a7b;
