--- a/webpage-style.css
+++ b/webpage-style.css
@@ -67,15 +67,37 @@ html {
     font-size: 1.5em;
 }
 
+main {
+    scroll-snap-type: y mandatory;
+}
 
+#about-me {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
 
+#connect {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+#weather-project {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+
+#about-me {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
 #icon {
     width: 12%;
     height: auto;
     background-color: #fffee8;
     border-radius: 50%;
 }
+
 #about-me, #connect {
+    scroll-snap-align: start;
     display: inline-block;
     border: 3px solid #8c8a7b;
     background: #cfe786;
