--- a/webpage-style.css
+++ b/webpage-style.css
@@ -71,9 +71,11 @@ main {
     scroll-snap-type: y mandatory;
 }
 
-#about-me {
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
+#about-me-anchor, #connect-anchor, #project-anchor{
+   display: block;
+    position: relative;
+    top: -50px;
+    visibility: hidden;
 }
 
 #connect {
