--- a/webpage-style.css
+++ b/webpage-style.css
@@ -47,12 +47,12 @@ html {
 /*}*/
 
 #navbar {
-    background-color: #0092b0;
+    background-color: #fe7920;
     color: white;
     width: 100vw;
     height: 50px;
     margin-bottom: 10px;
-    border: 3px solid #8c8a7b;
+    border: 3px solid #7f7a6f;
     display: block;
     position: fixed;
     top: 0;
@@ -64,9 +64,20 @@ html {
     color: white !important;
     text-decoration: none;
     font-family: 'Lobster', cursive;
-    font-size: 1.5em;
+    font-size: 1.75em;
+}
+#small-icon {
+    width: 27%;
+    height: auto;
+    background-color: #fffee8;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: inline-block;
 }
 
+#icon-li {
+    width: 150px;
+}
 main {
     scroll-snap-type: y mandatory;
 }
