--- a/webpage-style.css
+++ b/webpage-style.css
@@ -1,54 +1,61 @@
 body {
-    background-image: url("leaves.jpg");
-, url("leaves.jpg"), url("leaves2.jpg");
-    background-position: right, center, left;
+    background-image: url("right-crop.png");
+    background-position: right;
     background-repeat: no-repeat;
-    background-size: 100vh;
+    background-size: cover;
+
+}
+
+#sidebar {
+    width: 200px;
+    height: 100vh;
+    background-size: cover;
+    background-image: url("wood.jpg");
+    display: inline-block;
 }
 #main-container {
     width: 100vw;
     height: 100vh;
 }
-#sidebar, #sidebar-img {
-    width: 20vw;
-    height: 100vh;
+
+
+#navbar {
+    background-color: rgba(224, 200, 173, .6);
+    color: white;
+    /*width: 100vw;*/
+    /*height: 50px;*/
+    /*border: 3px solid #7f7a6f;*/
+    display: block;
+    position: fixed;
+    left: 25px;
+    border-radius: 10px;
+    height: 90vh;
 }
-/*#left-background, #left-img {*/
-/*    height: 100vh;*/
-/*    width: auto;*/
-/*    display: inline-block;*/
-/*    position: absolute;*/
-/*    z-index: 1;*/
-/*}*/
-/*#left-space1, #left-space-img1 {*/
-/*    height: 100vh;*/
-/*    width: auto;*/
-/*   display: inline-block;*/
-/*    position: fixed;*/
-/*    right: 397px;*/
-/*    z-index: 20000;*/
-/*}*/
-/*#right-space1, #right-space-img1 {*/
-/*    height: 100vh;*/
-/*    width: auto;*/
-/*    display: inline-block;*/
-/*    position: fixed;*/
-/*    left: 440px;*/
-/*    z-index: 20000;*/
-/*}*/
-/*#right-background, #right-img {*/
-/*    height: 100vh;*/
-/*    width: auto;*/
-/*    display: inline-block;*/
-/*    position: fixed;*/
-/*    right: 0px;*/
-/*}*/
 
+.nav-li > a {
+    color: black !important;
+    text-decoration: none;
+    font-family: 'Lobster', cursive;
+    font-size: 1.75em;
+}
+#small-icon {
+    width: 90%;
+    height: auto;
+    background-color: #fffee8;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: inline-block;
+}
 
-/*body, html {*/
-/*    height: 100%;*/
-/*}*/
+#icon-li {
+    width: 150px;
+}
 
+#about-me {
+    border: 3px solid #8c8a7b;
+    background: #cfe786;
+
+}
 
 
 
