--- a/webpage-style.css
+++ b/webpage-style.css
@@ -3,7 +3,15 @@ body {
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
+    padding: 0;
 
+}
+
+html {
+    width: 100vw;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 #main-container {
@@ -11,53 +19,9 @@ body {
     height: 100vh;
 }
 
-/*Large Nav Bar*/
-
-#sidebar {
-    width: 15vw;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("img/wood-slim.png");
-    display: inline-block;
-}
-
-#navbar-section {
-    background-color: rgba(224, 200, 173, .5);
-    color: white;
-    /*width: 100vw;*/
-    /*height: 50px;*/
-    /*border: 3px solid #7f7a6f;*/
-    display: block;
-    position: fixed;
-    left: 25px;
-    border-radius: 10px;
-    height: 90vh;
-    width: 10vw;
-    margin-top: 10px;
-}
-
-.nav-li > a {
-    color: black !important;
-    text-decoration: none;
-    font-family: 'Lobster', cursive;
-    font-size: 1.75em;
-}
-
-.nav-li > a {
-    color: white !important;
-    text-decoration: none;
-    font-family: 'Lobster', cursive;
-    font-size: 1.75em;
-}
-
-#icon-li {
-    width: 150px;
-}
-
 /*Small Nav Bar*/
 
-#navbar-section-small {
+#navbar-small {
     background-image: url("img/wood-small-nav.png");
     background-size: cover;
     color: white;
@@ -78,20 +42,68 @@ body {
     font-size: 1.75em;
 }
 #small-icon-mobile {
-    width: 12%;
+    width: 27%;
     height: auto;
     background-color: #fffee8;
     border-radius: 50%;
-    margin-right: 5px;
-    display: inline-block;
+}
+
+#icon-li-mobile {
+   width: 150px;
 }
 
 #about-me-anchor, #connect-anchor, #project-anchor{
-   display: block;
+    display: block;
     position: relative;
     top: -47px;
     visibility: hidden;
 }
+
+
+/*Large Nav Bar*/
+
+/*#sidebar {*/
+/*    width: 15vw;*/
+/*    height: 100vh;*/
+/*    background-size: cover;*/
+/*    background-repeat: no-repeat;*/
+/*    background-image: url("img/wood-slim.png");*/
+/*    display: inline-block;*/
+/*}*/
+
+/*#navbar-section {*/
+/*    background-color: rgba(224, 200, 173, .5);*/
+/*    color: white;*/
+/*    !*width: 100vw;*!*/
+/*    !*height: 50px;*!*/
+/*    !*border: 3px solid #7f7a6f;*!*/
+/*    display: block;*/
+/*    position: fixed;*/
+/*    left: 25px;*/
+/*    border-radius: 10px;*/
+/*    height: 90vh;*/
+/*    width: 10vw;*/
+/*    margin-top: 10px;*/
+/*}*/
+
+/*.nav-li > a {*/
+/*    color: black !important;*/
+/*    text-decoration: none;*/
+/*    font-family: 'Lobster', cursive;*/
+/*    font-size: 1.75em;*/
+/*}*/
+
+/*.nav-li > a {*/
+/*    color: white !important;*/
+/*    text-decoration: none;*/
+/*    font-family: 'Lobster', cursive;*/
+/*    font-size: 1.75em;*/
+/*}*/
+
+/*#icon-li {*/
+/*    width: 150px;*/
+/*}*/
+
 
 
 
