--- a/webpage-style.css
+++ b/webpage-style.css
@@ -3,6 +3,7 @@ body {
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     margin: 0;
     padding: 0;
 
@@ -10,6 +11,7 @@ body {
 
 html {
     width: 100vw;
+    height: 100vh;
     margin: 0 !important;
     padding: 0 !important;
 }
@@ -73,7 +75,7 @@ html {
 #about-me, #connect {
     display: inline-block;
     border: 3px solid #8c8a7b;
-    background: #cfe786;
+    background-color: rgba(224, 200, 173, .5);
     width: 100vw;
     padding: 10px;
     margin-bottom: 10px;
@@ -84,7 +86,7 @@ html {
 #main-project {
     display: inline-block;
     border: 3px solid #8c8a7b;
-    background: #cfe786;
+    background-color: rgba(224, 200, 173, .5);
     width: 100vw;
     padding: 10px;
     margin-bottom: 10px;
@@ -110,7 +112,7 @@ html {
 
     display: inline-block;
     border: 3px solid #8c8a7b;
-    background: #fffee8;
+    background-color: rgba(224, 200, 173, .5);
     width: 100%;
     /*height: 25vw;*/
     padding: 10px;
