--- a/webpage-style.css
+++ b/webpage-style.css
@@ -30,7 +30,7 @@ html {
     width: 100vw;
     height: 50px;
     margin-bottom: 10px;
-    border: 3px solid #7f7a6f;
+    border: 1px solid #7f7a6f;
     display: block;
     position: fixed;
     top: 0;
@@ -65,7 +65,7 @@ html {
 /*Page Content Small*/
 
 #icon {
-    width: 12%;
+    width: 100px;
     height: auto;
     background-color: #fffee8;
     border-radius: 50%;
@@ -74,8 +74,8 @@ html {
 
 #about-me, #connect {
     display: inline-block;
-    border: 3px solid #8c8a7b;
-    background-color: rgba(224, 200, 173, .5);
+    border: 1px solid #8c8a7b;
+    background-color: rgba(224, 200, 173, .3);
     width: 100vw;
     padding: 10px;
     margin-bottom: 10px;
@@ -85,8 +85,8 @@ html {
 
 #main-project {
     display: inline-block;
-    border: 3px solid #8c8a7b;
-    background-color: rgba(224, 200, 173, .5);
+    border: 1px solid #8c8a7b;
+    background-color: rgba(224, 200, 173, .3);
     width: 100vw;
     padding: 10px;
     margin-bottom: 10px;
@@ -111,8 +111,8 @@ html {
 #weather-project, #coffee-project {
 
     display: inline-block;
-    border: 3px solid #8c8a7b;
-    background-color: rgba(224, 200, 173, .5);
+    border: 1px solid #8c8a7b;
+    background-color: #fffee8;
     width: 100%;
     /*height: 25vw;*/
     padding: 10px;
