--- a/style-bright.css
+++ b/style-bright.css
@@ -17,148 +17,149 @@
 /*#b8c972 - green background boxes*/
 /*#cfe786 - lighter green background boxes*/
 /**!*/
-/** {*/
-/*    font-family: 'Lato', sans-serif;*/
-/*}*/
+* {
+    font-family: 'Lato', sans-serif;
+}
 
-/*h2 {*/
-/*    font-family: 'Lobster', cursive;*/
-/*}*/
-/*body {*/
-/*    background-color: #cebc00;*/
-/*    margin: 0;*/
-/*    padding: 0;*/
+h2 {
+    font-family: 'Lobster', cursive;
+}
+body {
+    background-color: #cebc00;
+    margin: 0;
+    padding: 0;
 
-/*}*/
+}
 
-/*html {*/
+html {
+    width: 100vw;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+#header-image {
+    width: 100%;
+    height: auto;
+    margin-top: 50px;
+}
+
+/*#header-div {*/
 /*    width: 100vw;*/
-/*    margin: 0 !important;*/
-/*    padding: 0 !important;*/
+/*    height: 100vh;*/
 /*}*/
 
-/*#header-image {*/
-/*    width: 100%;*/
-/*    height: auto;*/
-/*    margin-top: 50px;*/
-/*}*/
+#navbar {
+    background-color: #fe7920;
+    color: white;
+    width: 100vw;
+    height: 50px;
+    margin-bottom: 10px;
+    border: 3px solid #7f7a6f;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
 
-/*!*#header-div {*!*/
-/*!*    width: 100vw;*!*/
-/*!*    height: 100vh;*!*/
-/*!*}*!*/
+}
 
-/*#navbar {*/
-/*    background-color: #fe7920;*/
-/*    color: white;*/
-/*    width: 100vw;*/
-/*    height: 50px;*/
-/*    margin-bottom: 10px;*/
-/*    border: 3px solid #7f7a6f;*/
-/*    display: block;*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    left: 0;*/
+.nav-li > a {
+    color: white !important;
+    text-decoration: none;
+    font-family: 'Lobster', cursive;
+    font-size: 1.75em;
+}
+#small-icon {
+    width: 27%;
+    height: auto;
+    background-color: #fffee8;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: inline-block;
+}
 
-/*}*/
+#icon-li {
+    width: 150px;
+}
+main {
+    scroll-snap-type: y mandatory;
+}
 
-/*.nav-li > a {*/
-/*    color: white !important;*/
-/*    text-decoration: none;*/
-/*    font-family: 'Lobster', cursive;*/
-/*    font-size: 1.75em;*/
-/*}*/
-/*#small-icon {*/
-/*    width: 27%;*/
-/*    height: auto;*/
-/*    background-color: #fffee8;*/
-/*    border-radius: 50%;*/
-/*    margin-right: 5px;*/
-/*    display: inline-block;*/
-/*}*/
+#about-me-anchor, #connect-anchor, #project-anchor{
+   display: block;
+    position: relative;
+    top: -47px;
+    visibility: hidden;
+}
 
-/*#icon-li {*/
-/*    width: 150px;*/
-/*}*/
-/*main {*/
-/*    scroll-snap-type: y mandatory;*/
-/*}*/
+#connect {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+#weather-project {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
 
-/*#about-me-anchor, #connect-anchor, #project-anchor{*/
-/*   display: block;*/
-/*    position: relative;*/
-/*    top: -47px;*/
-/*    visibility: hidden;*/
-/*}*/
+#about-me {
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+#icon {
+    width: 12%;
+    height: auto;
+    background-color: #fffee8;
+    border-radius: 50%;
+}
 
-/*#connect {*/
-/*    scroll-snap-stop: always;*/
-/*    scroll-snap-align: start;*/
-/*}*/
-/*#weather-project {*/
-/*    scroll-snap-stop: always;*/
-/*    scroll-snap-align: start;*/
-/*}*/
+#about-me, #connect {
+    display: inline-block;
+    border: 3px solid #8c8a7b;
+    background: #cfe786;
+    width: 100vw;
+    padding: 10px;
+    margin-bottom: 10px;
+    /*height: 25vw;*/
 
-/*#about-me {*/
-/*    scroll-snap-stop: always;*/
-/*    scroll-snap-align: start;*/
-/*}*/
-/*#icon {*/
-/*    width: 12%;*/
-/*    height: auto;*/
-/*    background-color: #fffee8;*/
-/*    border-radius: 50%;*/
-/*}*/
-
-/*#about-me, #connect {*/
-/*    display: inline-block;*/
-/*    border: 3px solid #8c8a7b;*/
-/*    background: #cfe786;*/
-/*    width: 100vw;*/
-/*    padding: 10px;*/
-/*    margin-bottom: 10px;*/
-/*    !*height: 25vw;*!*/
-
-/*}*/
-/*#main-project {*/
-/*    display: inline-block;*/
-/*    border: 3px solid #8c8a7b;*/
-/*    background:  #cfe786;*/
-/*    width: 100vw;*/
-/*    padding: 10px;*/
-/*    !*margin-bottom: 10px;*!*/
+}
+#main-project {
+    display: inline-block;
+    border: 3px solid #8c8a7b;
+    background:  #cfe786;
+    width: 100vw;
+    padding: 10px;
+    /*margin-bottom: 10px;*/
 
 
-/*}*/
-/*.outside-link > a {*/
-/*    color: #0092b0;*/
-/*}*/
+}
+.outside-link > a {
+    color: #0092b0;
+}
 
-/*.outside-link > a:visited{*/
-/*    color: #8e3499;*/
-/*}*/
+.outside-link > a:visited{
+    color: #8e3499;
+}
 
-/*.outside-link > a:hover {*/
-/*    color: #ff9300;*/
-/*}*/
+.outside-link > a:hover {
+    color: #ff9300;
+}
 
-/*.outside-link > a:active {*/
-/*    color: #fe7920;*/
-/*}*/
+.outside-link > a:active {
+    color: #fe7920;
+}
 
-/*#weather-project, #coffee-project {*/
+#weather-project, #coffee-project {
 
-/*    display: inline-block;*/
-/*    border: 3px solid #8c8a7b;*/
-/*    background: #fffee8;*/
-/*    width: 100%;*/
-/*    !*height: 25vw;*!*/
-/*    padding: 10px;*/
-/*    margin-bottom: 10px;*/
+    display: inline-block;
+    border: 3px solid #8c8a7b;
+    background: #fffee8;
+    width: 100%;
+    /*height: 25vw;*/
+    padding: 10px;
+    margin-bottom: 10px;
 
-/*}*/
+}
 
-/*#weather-img, #coffee-img {*/
-/*    width: 100%;*/
-/*    height: auto;*/
+#weather-img, #coffee-img {
+    width: 100%;
+    height: auto;
+}
