--- a/webpage-style.css
+++ b/webpage-style.css
@@ -120,13 +120,26 @@ html {
     width: 100%;
     /*height: 25vw;*/
     padding: 10px;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
 
 }
 
-#weather-img, #coffee-img {
-    width: 100%;
-    height: auto;
+/*#weather-img-car, #coffee-img-car, #coffee-img-car2 {*/
+/*    width: 100%;*/
+/*    height: auto;*/
+/*}*/
+
+/*Carousel */
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    background-color: #8a3e05;
+    border-radius: 30%;
+    padding: 10%;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    width: 50px;
+
 }
 
 
