--- a/webpage-style.css
+++ b/webpage-style.css
@@ -16,10 +16,10 @@ html {
     padding: 0 !important;
 }
 
-#main-container {
-    width: 100vw;
-    height: 100vh;
-}
+/*#main-container-small {*/
+/*    width: 100vw;*/
+/*    height: 100vh;*/
+/*}*/
 
 /*Small Nav Bar*/
 
