--- a/webpage-style.css
+++ b/webpage-style.css
@@ -145,47 +145,61 @@ html {
 
 /*Large Nav Bar*/
 
-/*#sidebar {*/
-/*    width: 15vw;*/
-/*    height: 100vh;*/
-/*    background-size: cover;*/
-/*    background-repeat: no-repeat;*/
-/*    background-image: url("img/wood-slim.png");*/
-/*    display: inline-block;*/
-/*}*/
+#sidebar {
+    width: 15vw;
+    height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("img/wood-slim.png");
+    background-attachment: fixed;
+    display: inline-block;
+}
 
-/*#navbar-section {*/
-/*    background-color: rgba(224, 200, 173, .5);*/
-/*    color: white;*/
-/*    !*width: 100vw;*!*/
-/*    !*height: 50px;*!*/
-/*    !*border: 3px solid #7f7a6f;*!*/
-/*    display: block;*/
-/*    position: fixed;*/
-/*    left: 25px;*/
-/*    border-radius: 10px;*/
-/*    height: 90vh;*/
-/*    width: 10vw;*/
-/*    margin-top: 10px;*/
-/*}*/
+#navbar-section {
+    background-color: rgba(224, 200, 173, .3);
+    color: white;
+    /*width: 100vw;*/
+    /*height: 50px;*/
+    /*border: 3px solid #7f7a6f;*/
+    display: inline-block;
+    position: fixed;
+    left: 25px;
+    border-radius: 10px;
+    height: 90vh;
+    width: 10vw;
+    margin-top: 10px;
+}
 
-/*.nav-li > a {*/
-/*    color: black !important;*/
-/*    text-decoration: none;*/
-/*    font-family: 'Lobster', cursive;*/
-/*    font-size: 1.75em;*/
-/*}*/
+.nav-li > a {
+    color: black !important;
+    text-decoration: none;
+    font-family: 'Lobster', cursive;
+    font-size: 1.75em;
+    display: inline-block;
+}
 
-/*.nav-li > a {*/
-/*    color: white !important;*/
-/*    text-decoration: none;*/
-/*    font-family: 'Lobster', cursive;*/
-/*    font-size: 1.75em;*/
-/*}*/
+.nav-li > a {
+    color: white !important;
+    text-decoration: none;
+    font-family: 'Lobster', cursive;
+    font-size: 1.75em;
+}
 
-/*#icon-li {*/
-/*    width: 150px;*/
-/*}*/
+#sidebar-icon {
+    width: 150px;
+}
+
+/*Projects Page*/
+
+#main-container-large-projects {
+    height: 100vh;
+    width: 100vw;
+}
+
+#carouselExampleCaptions {
+    height: 50vh;
+    width: 50vw;
+}
 
 
 
