--- a/webpage-style.css
+++ b/webpage-style.css
@@ -146,7 +146,7 @@ html {
 /*Large Nav Bar*/
 
 #sidebar {
-    width: 15vw;
+    width: 200px;
     height: 100vh;
     background-size: contain;
     background-repeat: no-repeat;
@@ -165,17 +165,9 @@ html {
     position: fixed;
     left: 25px;
     border-radius: 10px;
-    height: 90vh;
-    width: 10vw;
+    height: 97vh;
+    width: 140px;
     margin-top: 10px;
-}
-
-.nav-li > a {
-    color: black !important;
-    text-decoration: none;
-    font-family: 'Lobster', cursive;
-    font-size: 1.75em;
-    display: inline-block;
 }
 
 .nav-li > a {
@@ -186,7 +178,9 @@ html {
 }
 
 #sidebar-icon {
-    width: 150px;
+    width: 140px;
+    background-color: #fffee8;
+    border-radius: 50%;
 }
 
 /*Projects Page*/
