--- a/webpage-style.css
+++ b/webpage-style.css
@@ -158,9 +158,6 @@ html {
 #navbar-section {
     background-color: rgba(224, 200, 173, .3);
     color: white;
-    /*width: 100vw;*/
-    /*height: 50px;*/
-    /*border: 3px solid #7f7a6f;*/
     display: inline-block;
     position: fixed;
     left: 25px;
@@ -188,11 +185,12 @@ html {
 #main-container-large-projects {
     height: 100vh;
     width: 100vw;
+    /*display: inline-block!important;*/
 }
 
-#carouselExampleCaptions {
-    height: 50vh;
-    width: 50vw;
+#carouselExampleCaptions-large {
+    height: 70vh;
+    width: 70vw;
 }
 
 
