--- a/webpage-style.css
+++ b/webpage-style.css
@@ -189,8 +189,25 @@ html {
 }
 
 #carouselExampleCaptions-large {
-    height: 70vh;
-    width: 70vw;
+    height: 100vh;
+    width: 85vw;
+}
+
+#left-block {
+    width: auto;
+    height: 100vh;
+}
+
+#middle-block {
+    width: auto;
+    height: 100vh;
+    overflow-y: hidden;
+
+}
+
+#scroll-test {
+    height: 100vh;
+    background-color: red;
 }
 
 
