updating about me to be before projects

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -205,6 +205,17 @@ html {
 
 }
 
+#about-me-large, #connect-large {
+    display: inline-block;
+    border: 1px solid #8c8a7b;
+    background-color: rgba(224, 200, 173, .5);
+    width: 87vw;
+    height: 100vw;
+    padding: 10px;
+    margin-bottom: 15px;
+
+
+}
 
 #scroll-test {
     height: 100vh;
