moved about me to default page

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -83,7 +83,7 @@ html {
     width: 100vw;
     padding: 10px;
     margin-bottom: 15px;
-    /*height: 25vw;*/
+
 
 }
 
@@ -210,11 +210,9 @@ html {
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
     width: 87vw;
-    height: 100vw;
+    height: 100vh;
     padding: 10px;
     margin-bottom: 15px;
-
-
 }
 
 #scroll-test {
