updated middle block container to contain about me and projects

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -205,7 +205,7 @@ html {
 
 }
 
-#about-me-large, #connect-large {
+#about-me-large, #connect-large, #projects-large {
     display: inline-block;
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
