--- a/webpage-style.css
+++ b/webpage-style.css
@@ -17,10 +17,7 @@ html {
     scroll-behavior: smooth;
 }
 
-/*#main-container-small {*/
-/*    width: 100vw;*/
-/*    height: 100vh;*/
-/*}*/
+/*MOBILE PAGE*/
 
 /*Small Nav Bar*/
 
@@ -126,9 +123,6 @@ html {
     border: 1px solid #8c8a7b;
     background-color: #fffee8;
     width: 100%;
-    /*height: 25vw;*/
-    /*padding: 10px;*/
-    /*margin-bottom: 10px;*/
     font-family: 'Lato', sans-serif;
 
 }
@@ -143,7 +137,6 @@ html {
 .carousel-control-next-icon, .carousel-control-prev-icon {
     background-color: #8a3e05;
     border-radius: 30%;
-    /*padding: 12%;*/
 }
 
 .carousel-control-prev, .carousel-control-next {
@@ -151,7 +144,7 @@ html {
 }
 
 
-
+/*DESKTOP PAGE*/
 
 /*Large Nav Bar*/
 
@@ -166,7 +159,7 @@ html {
 }
 
 #navbar-section {
-    background-color: rgba(224, 200, 173, .3);
+    background-color: rgba(224, 200, 173, .2);
     color: white;
     display: inline-block;
     position: fixed;
@@ -181,7 +174,7 @@ html {
     color: white !important;
     text-decoration: none;
     font-family: 'Neuton', serif;
-    font-size: 1.75em;
+    font-size: 40px;
 }
 
 #sidebar-icon {
