added smooth scrolling between anchor tags

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -14,7 +14,7 @@ html {
     height: 100vh;
     margin: 0 !important;
     padding: 0 !important;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth!important;
 }
 
 /*MOBILE PAGE*/
