--- a/webpage-style.css
+++ b/webpage-style.css
@@ -180,7 +180,9 @@ html {
     text-decoration: none;
     font-family: 'Neuton', serif;
     font-size: 40px;
+    text-shadow: 3px 3px 5px #000000;
 }
+
 
 #sidebar-icon {
     width: 110px;
