--- a/webpage-style.css
+++ b/webpage-style.css
@@ -189,6 +189,7 @@ html {
     height: auto;
     background-color: #fffee8;
     border-radius: 50%;
+    /*box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.55);*/
 }
 
 /*Large Content - middle-block*/
@@ -222,11 +223,13 @@ html {
 #name > h1 {
     font-size: 7em;
     font-family: 'Neuton', serif;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.55);
 }
 
 #tag-line {
     font-family: 'Neuton', serif;
     font-size: 3em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.55);
 }
 #landing-page {
     display: inline-block;
