--- a/webpage-style.css
+++ b/webpage-style.css
@@ -189,7 +189,7 @@ html {
     height: auto;
     background-color: #fffee8;
     border-radius: 50%;
-    /*box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.55);*/
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.55);
 }
 
 /*Large Content - middle-block*/
