added separate section for technical skills, updated anchor and styling

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -80,7 +80,7 @@ html {
 }
 
 
-#about-me, #connect {
+#about-me, #connect, #technical-skills {
     display: inline-block;
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
@@ -98,6 +98,7 @@ html {
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
     width: 100vw;
+    margin-top: 15px;
     padding: 15px;
     font-family: 'Lato', sans-serif;
 }
