--- a/webpage-style.css
+++ b/webpage-style.css
@@ -210,11 +210,6 @@ html {
     border-radius: 60%;
 }
 
-#carouselExampleCaptions-large {
-    height: 100vh;
-    width: 75vw;
-}
-
 #left-block {
     width: auto;
     height: 100vh;
@@ -242,7 +237,7 @@ html {
     height: 100vh;
     padding: 10px;
 }
-#about-me-large, #skills-large, #project-page, #connect-page {
+#about-me-large, #skills-large, #projects-large, #carouselExampleCaptions-large, #connect-large{
     display: inline-block;
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
