updated background colors on navbar

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -170,7 +170,7 @@ html {
 
 #navbar-section {
     background-color: rgba(224, 200, 173, .3);
-    color: white;
+    color: #fffee8;
     display: inline-block;
     position: fixed;
     left: 25px;
