added icons to skills on mobile and desktop:

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -97,6 +97,10 @@ html {
     margin-bottom: 15px;
 }
 
+#skills-list-large {
+    list-style: none;
+}
+
 #main-project {
     display: inline-block;
     border: 1px solid #8c8a7b;
@@ -229,7 +233,7 @@ html {
 #tag-line {
     font-family: 'Neuton', serif;
     font-size: 3em;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.55);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 #landing-page {
     display: inline-block;
