--- a/webpage-style.css
+++ b/webpage-style.css
@@ -251,6 +251,9 @@ html {
     font-family: 'Lato', sans-serif;
 }
 
+.project-title {
+    font-size: 1.75em;
+}
 .project-text {
     height: 25vh;
 }
