updated spacing on headings

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -89,6 +89,7 @@ html {
     width: 100vw;
     padding: 15px;
     font-family: 'Lato', sans-serif;
+    min-height: 90%;
 }
 
 #connect {
@@ -262,7 +263,7 @@ html {
 }
 
 #about-me-large, #skills-large, #projects-large, #carouselExampleCaptions-large, #connect-large {
-    display: inline-block;
+    display: block;
     background-color: rgba(224, 200, 173, .2);
     width: 65vw;
     height: 100vh;
@@ -272,6 +273,7 @@ html {
 }
 
 .project-title {
+    margin-top: 20px;
     font-size: 1.75em;
 }
 .project-text {
@@ -293,6 +295,10 @@ html {
     font-size: 1.5em;
     list-style: none;
 
+}
+
+.title {
+    margin-top: 20px!important;
 }
 
 
