updated overflow properties

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -240,7 +240,7 @@ html {
 #middle-block {
     width: auto;
     height: 100vh;
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
 
 #name > h1 {
